# shadertoy

./: Cargo.toml  README.md
src/: main.rs  prelude.wgsl  shader.rs  shader.wgsl
